fix safari alignment issue for main page

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,12 +8,9 @@ body {
     margin: 0;
 }
 
-a {
-    cursor: pointer;
-}
-
 div {
     text-align-last: justify;
+    width: 67.5%;  /* for Safari */
 }
 
 @keyframes stroke {
