--- a/styles/whom.css
+++ b/styles/whom.css
@@ -3,10 +3,6 @@ body {
     margin: 0;
 }
 
-a {
-    cursor: pointer;
-}
-
 figure {
     margin: 0;
 }
